fixed subquery in the FROM clause with parameter (BUG#3020)